# AIE9_DEMO_DAY

RiskHalo_Certification_Challenge/: .gitignore  README.md  api_server.py  main.py  pyproject.toml
RiskHalo_Certification_Challenge/agents/: coach_agent.py  tools.py
RiskHalo_Certification_Challenge/app/: behavioral_engine.py  config_loader.py  expectancy_engine.py  feature_engine.py  parser.py  rule_engine.py  session_summary_builder.py
RiskHalo_Certification_Challenge/config/: rules_config.yaml
RiskHalo_Certification_Challenge/data/Weekly_Trade_Data_Uploads/: Week_10_Trade_data.xlsx  Week_11_Trade_data.xlsx  Week_12_Trade_data.xlsx  Week_13_Trade_data.xlsx  Week_14_Trade_data.xlsx  Week_15_Trade_data.xlsx  Week_16_Trade_data.xlsx  Week_17_Trade_data.xlsx  Week_18_Trade_data.xlsx  Week_19_Trade_data.xlsx  Week_1_Trade_data.xlsx  Week_20_Trade_data.xlsx  Week_21_Trade_data.xlsx  Week_22_Trade_data.xlsx  Week_23_Trade_data.xlsx  (+9 more)
RiskHalo_Certification_Challenge/deliverables/: DELIVERABLES.md  LoomVideo.md
RiskHalo_Certification_Challenge/evaluation/: generate_testset.py  personas.py  ragas_eval.py  run_ragas_evaluation.py
RiskHalo_Certification_Challenge/rag/: embedder.py  multi_query_retriever.py  prompts.py  retriever.py  vector_store.py
RiskHalo_Certification_Challenge/tests/: __init__.py  conftest.py  test_behavioral_engine.py  test_expectancy_engine.py  test_feature_engine.py  test_parser.py  test_session_summary_builder.py  test_vectorDB_retriever.py
RiskHalo_Certification_Challenge/ui/: AGENTS.md  README.md  index.html  package.json
(+12 files in other folders)
